# azalea

./: .coverall.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO  chatyu.c  coverity.sh  ichat.c  ichat.h  makefile  yuchat.c
Tests/: test_conf.c  test_hashtable.c  test_log.c  test_mysql.c  test_stack.c
cluster/: TODO
config/: config.c  config.h  testconf.c
dbs/mysql/: mysql_driver.c  mysql_driver.h  mysql_test.c  version.c
dbs/sqlite3/: sqlite_test.c
docs/: core.md  mysql_driver.md  pool.md
ds/: hashtable.c  hashtable.h  testht.c
include/: ichat.h
log/: log.c  makefile  test.c
parser/: parser.c  parser.h
pool/: README.md  hashtable.c  hashtable.h  pool.c  pool.h
protocol/: protocol.md
src/: common.h  ichat.c  ichat.h  service.c
src/apis/: apis.h  ds.c  ds.h  file.c  file.h  hashtable.c  hashtable.h  process.c  process.h  pth.c  pth.h  sock.c  sock.h  stack.c  stack.h  thread.c  thread.h
src/client/: client.c  client.h  iclient.c
src/config/: config.c  config.h
src/core/: args.c  args.h  config.c  config.h  ichat.c  ichat.h  log.h  message.c  message.h  parser.h  pool.h  procmanage.c  procmanage.h
src/dbs/mysql/: mysql_driver.c  mysql_driver.h
src/ds/: ds.c  ds.h  hashtable.c  hashtable.h  stack.c  stack.h
src/include/: ichat.h
src/log/: log.c  log.h
src/net/: message.c  message.h  net.c  net.h
src/parser/: README.md  message.c  message.h  parser.c  parser.h
src/pool/: pool.c  pool.h  shakehands.c
src/process/: procinit.c  procinit.h
src/prot/: websocket.c  websocket.h
src/tcper/: tcper.c
tcper/: Makefile  makefile  tcper.c
tests/: CMakeLists.txt  test_conf.c  test_file.c  test_hashtable.c  test_log.c  test_message.c  test_mysql.c  test_mysqldrv.c  test_net.c  test_others.c  test_pool.c  test_pth.c  test_sock.c  test_stack.c
unix/: main.c  makefile  thread.c  thread.h
windows/: main.c  thread.h
